--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,9 +1,21 @@
 .DS_Store
-node_modules/
-/dist/
+node_modules
+/dist
+
+/tests/e2e/reports/
+selenium-debug.log
+chromedriver.log
+geckodriver.log
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -12,3 +24,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
