--- a/frontend/public/static/manifest.json
+++ b/frontend/public/static/manifest.json
@@ -1,15 +1,15 @@
 {
-    "short_name": "時給シミュ",
-    "name": "時給計測シミュレーター",
+    "short_name": "コスパシミュ",
+    "name": "コスパシミュレーター",
     "lang": "ja-JP",
     "icons": [
         {
-            "src": "dist/public/img/icons/android-chrome-192x192.png",
+            "src": "<%= BASE_URL %>static/img/icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "dist/public/img/icons/android-chrome-512x512.png",
+            "src": "<%= BASE_URL %>static/img/icons/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
