--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ flask-marshmallow = "*"
 gunicorn = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "python-3.7.8"
 
 [scripts]
 start = "python backend/run.py"
