--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "heroku-postbuild": "cd frontend; npm install; npm run build"
   },
   "dependencies": {
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-fixed-header": "^3.2.14",
